# Rift-OS

./: .gitattributes  .gitignore  Makefile  README.md  sdcard-example.img
dependency/virtio-drivers/src/: blk.rs
fat32/src/: dir.rs  entry.rs  lib.rs  volume.rs
kernel/: Cargo.toml
kernel/.cargo/: config
kernel/.cargo/cargo/: config
kernel/cargo/: config
kernel/src/: config.rs  entry.asm  lang_items.rs  linker.ld  main.rs  sbi.rs  stdio.rs  timer.rs
kernel/src/arch/riscv/: mod.rs
kernel/src/board/: qemu.rs
kernel/src/driver/block_device/: mod.rs  virtio.rs
kernel/src/fs/: block_device.rs  fs.rs  mod.rs
kernel/src/interrupt/: mod.rs
kernel/src/memory/: address.rs  frame.rs  frame_allocator.rs  heap_allocator.rs  mod.rs  page_table.rs
kernel/src/memory/allocator/: frame.rs  mod.rs
kernel/src/proc/: elf.rs  kthread.rs  mod.rs  scheduler.rs  thread.rs  uthread.rs
kernel/src/syscall/: fs.rs  mm.rs  mod.rs  proc.rs  syscall_num.rs  thread.rs
kernel/src/syscall/other/: mod.rs  time.rs
kernel/src/trap/: interrupt.rs  trap.asm
