[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.3.1"
# virtio-drivers = { path ="../virtio-drivers"}
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }

block_device = "0.1"
fat32 = {path="../fat32"}
xmas-elf = "0.9.0"
